website/code/raytracer-icc.log
BUILD COMMANDS FOR: raytracer.icc

Sun May 22 15:32:47 PDT 2005

/opt/intel_cc_80/bin/icc -O3 -ip -static -unroll  raytracer.c -o raytracer.icc_run
raytracer.c(38): error: identifier "INFINITY" is undefined
    if (disc < 0) return INFINITY;
                         ^

raytracer.c(40): error: identifier "INFINITY" is undefined
    if (t2 < 0) return INFINITY;
                       ^

raytracer.c(66): error: identifier "INFINITY" is undefined
    double lambda = INFINITY;
                    ^

compilation aborted for raytracer.c (code 2)
make[3]: [raytracer.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

raytracer.icc_run %A
Error, could not exec raytracer.icc_run 64 (No such file or directory)
PATH=/opt/shootout/shootout/bench/raytracer:/opt/shootout/shootout/bench/raytracer/tmp:/opt/xds_c/bin:/opt/intel_fc_80/bin:/opt/intel_cc_80/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/bin:/bin:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
